rework the boards api
